@@ -680,6 +680,15 @@ class TestIssues(QuantityTestCase):
         assert isinstance(q1, ureg.Quantity)
         assert len(q0) == len(q1) == 0
 
+    def test_issue1062(self):
+        # Must not be used by any other tests
+        assert "nanometer" not in ureg._units
+        for i in range(2):
+            ctx = Context.from_lines(["@context _", "cal = 4 J"])
+            with ureg.context("sp", ctx):
+                q = ureg.Quantity(1, "nm")
+                q.to("J")
+
 
 if np is not None:
 
