@@ -20,6 +20,8 @@ Pint Changelog
   disequality (Issue #1051, Thanks Guido Imperiale)
 - Fixed issue where quantities with a very large magnitude would throw an IndexError 
   when using to_compact()
+- Fixed crash when a Unit with prefix is declared for the first time while a Context
+  containing unit redefinitions is active (Issue #1062, Thanks Guido Imperiale)
 
 
 0.11 (2020-02-19)
